force-app/main/default/objects/IFv2_CustomValidationRules__mdt/IFv2_CustomValidationRules__mdt.object-meta.xml
<CustomObject>
    <description>This is used to create records for validation rules for specific workflows.</description>
    <label>Custom Validation Rule</label>
    <pluralLabel>Custom Validation Rules</pluralLabel>
</CustomObject>