force-app/main/default/objects/IFv2_CustomValidationRules__mdt/fields/ApproverValidation__c.field-meta.xml
<CustomField>
    <fullName>ApproverValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this checkbox if this record is for approver validation.</description>
    <inlineHelpText>Check this checkbox if this record is for approver validation.</inlineHelpText>
    <label>ApproverValidation</label>
    <type>Checkbox</type>
</CustomField>