force-app/main/default/objects/IFv2_CustomValidationRules__mdt/fields/BothFieldsOnExtensionObject__c.field-meta.xml
<CustomField>
    <fullName>BothFieldsOnExtensionObject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This fields has to be checked if both fields being used in this record are on extension object.</description>
    <inlineHelpText>Check this check box if both fields being used are on extension object.</inlineHelpText>
    <label>Both Fields on Extension Object</label>
    <type>Checkbox</type>
</CustomField>