force-app/main/default/objects/IFv2_CustomValidationRules__mdt/fields/DependentFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>DependentFieldAPI__c</fullName>
    <description>Enter the dependent field API Name.</description>
    <inlineHelpText>Enter the dependent field API Name.</inlineHelpText>
    <label>Dependent Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>