force-app/main/default/objects/IFv2_CustomValidationRules__mdt/fields/ExtensionAPIName__c.field-meta.xml
<CustomField>
    <fullName>ExtensionAPIName__c</fullName>
    <description>Used to find which Extension object is used in the validations</description>
    <inlineHelpText>Please add the Extension object name</inlineHelpText>
    <label>Extension API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>