force-app/main/default/objects/IFv2_CustomValidationRules__mdt/fields/GroupCheckbox__c.field-meta.xml
<CustomField>
    <fullName>GroupCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this checkbox if one or more check boxes are to be checked in request layout.</description>
    <inlineHelpText>Check this checkbox if one or more check boxes are to be checked in request layout.</inlineHelpText>
    <label>Group Checkbox</label>
    <type>Checkbox</type>
</CustomField>