force-app/main/default/objects/IFv2_CustomValidationRules__mdt/fields/HasExtensionObject__c.field-meta.xml
<CustomField>
    <fullName>HasExtensionObject__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this check box if  the field in this record is related to extension object.</inlineHelpText>
    <label>Has Extension Object</label>
    <type>Checkbox</type>
</CustomField>