force-app/main/default/objects/IFv2_CustomValidationRules__mdt/fields/MultiSelectPicklist__c.field-meta.xml
<CustomField>
    <fullName>MultiSelectPicklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this check box if any one of the group check box is required.</description>
    <inlineHelpText>Check this check box if any one of the group check box is required.</inlineHelpText>
    <label>MultiSelect Picklist</label>
    <type>Checkbox</type>
</CustomField>