force-app/main/default/objects/IFv2_CustomValidationRules__mdt/fields/RelatedList__c.field-meta.xml
<CustomField>
    <fullName>RelatedList__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this record is related to related list of the workflow.</description>
    <inlineHelpText>Check if this record is related to related list of the workflow.</inlineHelpText>
    <label>Related List</label>
    <type>Checkbox</type>
</CustomField>