force-app/main/default/objects/IFv2_CustomValidationRules__mdt/fields/RelatedListRecordType__c.field-meta.xml
<CustomField>
    <fullName>RelatedListRecordType__c</fullName>
    <description>To select the picklist value for the related list .</description>
    <inlineHelpText>Select the picklist value for the related list .</inlineHelpText>
    <label>Related List Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
                <default>true</default>
                <label>Employee</label>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Leave Details</fullName>
            </value>
            <value>
                <fullName>Leave Cancellation</fullName>
            </value>
            <value>
                <fullName>China MAE Combine</fullName>
            </value>
            <value>
                <fullName>China MAE Scrap</fullName>
            </value>
            <value>
                <fullName>China MAE Lost</fullName>
            </value>
            <value>
                <fullName>China MAE Transfer</fullName>
            </value>
            <value>
                <fullName>China MAE Before Split</fullName>
            </value>
            <value>
                <fullName>China MAE After Split</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>OT Application Details</fullName>
            </value>
            <value>
                <fullName>Time Data Amendment</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
                <isActive>false</isActive>
                <label>Table</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>