force-app/main/default/objects/IFv2_CustomValidationRules__mdt/fields/ValidationErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ValidationErrorMessage__c</fullName>
    <description>This is used to enter the error message to be displayed  during validation.</description>
    <inlineHelpText>Enter the validation error message to be displayed.</inlineHelpText>
    <label>Validation Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>