force-app/main/default/objects/IFv2_CustomValidationRules__mdt/fields/ValidationFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>ValidationFieldAPI__c</fullName>
    <inlineHelpText>Give the validation filed up on which validation should fire.</inlineHelpText>
    <label>Validation Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>