force-app/main/default/objects/IFv2_CustomValidationRules__mdt/fields/ValidationFieldValue__c.field-meta.xml
<CustomField>
    <fullName>ValidationFieldValue__c</fullName>
    <description>Give the value of the validation Filed API value.</description>
    <inlineHelpText>Give the value of the validation Filed API value.</inlineHelpText>
    <label>Validation Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>