force-app/main/default/objects/IFv2_CustomValidationRules__mdt/fields/Workflows__c.field-meta.xml
<CustomField>
    <fullName>Workflows__c</fullName>
    <description>To select the workflow to which this record is related to.</description>
    <inlineHelpText>Select the workflow to which this record is related to.</inlineHelpText>
    <label>Workflow</label>
    <referenceTo>IFv2_Workflows__mdt</referenceTo>
    <relationshipLabel>Custom Validation Rules</relationshipLabel>
    <relationshipName>Custom_Validation_Rules</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>