force-app/main/default/objects/IFv2_CustomValidationRules__mdt/listViews/AllCustomValidations.listView-meta.xml
<ListView>
    <fullName>AllCustomValidations</fullName>
    <columns>MasterLabel</columns>
    <columns>Workflows__c</columns>
    <columns>RelatedList__c</columns>
    <columns>RelatedListRecordType__c</columns>
    <columns>ValidationErrorMessage__c</columns>
    <columns>ApproverValidation__c</columns>
    <columns>ValidationFieldAPI__c</columns>
    <columns>ValidationFieldValue__c</columns>
    <columns>DependentFieldAPI__c</columns>
    <columns>ExtensionAPIName__c</columns>
    <columns>HasExtensionObject__c</columns>
    <columns>BothFieldsOnExtensionObject__c</columns>
    <columns>GroupCheckbox__c</columns>
    <columns>MultiSelectPicklist__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Custom Validations</label>
    <language>en_US</language>
</ListView>